--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,7 +19,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = waybar
 exec-once = blueman-applet
 exec-once = nm-applet --indicator
-exec = swaybg -m fill -i ~/.config/hypr/hong-kong-night.jpg
+exec = swaybg -m fill -i ~/.config/hypr/wallpaper.jpg
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
